<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="6dp"
    android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/Vin"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/Display_Vin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/Verified"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/Display_Verified"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/Speed"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/Display_Speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/Alert"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/Display_Alert"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/TimeStamp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/Display_TimeStamp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"/>

                </LinearLayout>



        </LinearLayout>



</androidx.cardview.widget.CardView>