<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    tools:context=".Activity.MakeData">


    <View
        android:id="@+id/topview_make"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/ontopview_make"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_make_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topview_make" />


    <View
        android:id="@+id/bottom_view_make"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_make_wave_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TopText_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Entry of Vin and Delay"
        android:textColor="@color/white"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/topview_make"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="@+id/topview_make"
        app:layout_constraintTop_toTopOf="@+id/topview_make" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_no_of_vin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/no_of_vin"
        app:boxBackgroundColor="#FFFFFF"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ontopview_make">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/no_of_vin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/frequency"
        app:boxBackgroundColor="#FFFFFF"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_no_of_vin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Should the Vin No. be same?"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_frequency">

    </TextView>

    <Spinner
        android:id="@+id/same_vin_param"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/layout_frequency" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_vin_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        android:text="@string/submit"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>