<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    android:layout_height="match_parent">


    <View
        android:id="@+id/topview_make"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/ontopview_make"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_manual_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topview_make" />


<!--    <EditText-->
<!--        android:id="@+id/manual_vin"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="244dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/manual_vin"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.194"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"/>-->


<!--    <EditText-->
<!--        android:id="@+id/manual_speed"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/manual_speed"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.194"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/manual_vin"/>-->

<!--    <Button-->
<!--        android:id="@+id/submit_manual_data"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="28dp"-->
<!--        android:text="@string/submit"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.12"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/manual_speed" />-->



    <View
        android:id="@+id/bottom_view_make"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_manual_wave_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TopText_Manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Manual Entry of Data"
        android:textColor="@color/white"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/topview_make"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="@+id/topview_make"
        app:layout_constraintTop_toTopOf="@+id/topview_make" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Layout_Manual_Vin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/manual_vin"
        app:boxBackgroundColor="#FFFFFF"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ontopview_make">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manual_vin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Layout_Manual_Speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/manual_speed"
        app:boxBackgroundColor="#FFFFFF"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Layout_Manual_Vin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manual_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_manual_data"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:text="@string/submit"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="@+id/topview_make"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/topview_make"
        app:layout_constraintTop_toBottomOf="@+id/Layout_Manual_Speed" />


</androidx.constraintlayout.widget.ConstraintLayout>